Fix gallery text z-index on hover

--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -137,7 +137,7 @@
       cursor: pointer;
 
       #{$p}__item {
-        &__image > div {
+        &__image {
           transform: scale(1.05);
         }
 
