--- a/src/components/image-box/ImageBox.scss
+++ b/src/components/image-box/ImageBox.scss
@@ -84,6 +84,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: 20;
     transform: translate(-50%, -50%);
     text-align: center;
 
